# MACHINE_LEARNING_BASICS

./: README.md  pyproject.toml
lab2/: notebook.ipynb
lab_1/: ames_transformer.joblib  high_price_estimator.joblib  low_price_estimator.joblib  notebook.html  notebook.ipynb  price_estimator.joblib
lab_2/: notebook.ipynb
lab_3/: notebook.ipynb
lab_4/: notebook.ipynb
lab_5/: notebook.ipynb
lab_6/: notebook.ipynb
lab_7/: notebook.ipynb
