[project]
name = "machine-learning-basics"
version = "0.1.0"
description = ""
authors = [
    {name = "Dominik Marek (dmarek03)",email = "domarek@student.agh.edu.pl"}
]
readme = "README.md"
requires-python = ">=3.11"

dynamic = ["dependencies"]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
feature-engine = "*"
jupyter = "*"
matplotlib = "*"
pandas = "2.*"
pyarrow = "*"
scikit-learn = "*"
seaborn = "*"
shap = "^0.47.0"
numpy = "2.1"
notebook = "^7.3.3"



[tool.poetry.group.dev.dependencies]
pre-commit = "*"
ruff = "*"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.ruff.lint]
ignore = [
    "E731",  # lambda expressions
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
