[project]
name = "machine-learning-basics"
version = "0.1.0"
description = ""
authors = [
    {name = "Dominik Marek (dmarek03)",email = "domarek@student.agh.edu.pl"}
]
readme = "README.md"
requires-python = ">=3.11, < 3.14"

dynamic = ["dependencies"]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
feature-engine = "*"
jupyter = "*"
matplotlib = "*"
pandas = "2.*"
pyarrow = "*"
scikit-learn = "*"
seaborn = "*"
shap = "^0.47.0"
numpy = "2.1"
notebook = "^7.4.2"
pynndescent = "^0.5.13"
sentence-transformers = "^4.0.1"
scikit-fingerprints = "^1.15.0"
torch = {version = "^2.5.1", source = "pytorch"}
torchvision = {version = "^0.20.1", source = "pytorch"}
torchaudio = {version = "^2.5.1", source = "pytorch"}
imblearn = "^0.0"
pyod = "^2.0.5"
optuna = "^4.3.0"
lightgbm = "^4.6.0"



[tool.poetry.group.dev.dependencies]
pre-commit = "*"
ruff = "*"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[tool.ruff.lint]
ignore = [
    "E731",  # lambda expressions
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
